Fixed the menu to work on mobile

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -127,6 +127,7 @@ li {
 
 .menu_link {
     text-transform: uppercase;
+    text-decoration: none;
     font-weight: bold;
     letter-spacing: 0.1em;
     margin: 0 10px;
